vanilla/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin-server
  labels:
    app: joplin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joplin-server
  template:
    metadata:
      labels:
        app: joplin-server
    spec:
      containers:
      - name: joplin-server
        image: joplin/server:2.4.1-beta
        ports:
        - containerPort: 22300
