vanilla/joplin-svc-https.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: joplin-server
  name: joplin-https
spec:
  ports:
  - name: https
    port: 22300
    protocol: TCP
    targetPort: 22300
  selector:
    app: joplin-server
  type: ClusterIP
